# rocket-pastebin

./: .gitignore  Cargo.toml  README.md  Rocket.toml  TODOS.md
migrations/2022-07-23-155231_create_pastes/: down.sql  up.sql
src/: dao.rs  dto.rs  lib.rs  main.rs  models.rs  paste_id.rs  respond.rs  schema.rs  tests.rs
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: app.tsx  index.css  service.ts
